--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,8 @@
     ],
     "require": {
         "vlucas/phpdotenv": "^5.6"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^12.0"
     }
 }
