--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,7 @@
-# APP SETTINGS
-APP_DEBUG=
-APP_NAME
+WEBHOOK_URL= 
 APP_URL=
-
-# DATABASE SETTINGS
-DB_HOST=
-DB_PORT=
+DB_HOST=localhost
+DB_PORT=3306
 DB_NAME=
 DB_USER=
-DB_PASS
-
-# ERROR LOGGING
-LOG_PATH=
-
-
-# EMAIL 
-MAIL_HOST
-MAIL_USER
-MAIL_PASSWORD
-MAIL_PORT
-
-# MISC 
-UPLOAD_FILE_SIZE =
+DB_PASS=
