--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,10 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^12.0"
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "cp .env.example .env"
+        ]
     }
 }
